--- a/Monitor-Ships/index.html
+++ b/Monitor-Ships/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 	<header class="header" role="banner">
-		<h1 class="logo">Marine Traffic</h1>
+		<h1 class="logo">Vessel Tracking</h1>
 	</header>
 	<main class="main" role="main">
 		<section id="map" class="map"></section>
